@startuml Cinema Module Class Diagram - Pha Phân Tích
!theme plain
skinparam roundcorner 10
skinparam shadowing false

skinparam class {
    BackgroundColor #FFF4E6
    BorderColor #D32F2F
    ArrowColor #D32F2F
    FontSize 11
}

skinparam linetype {
    linecolor #D32F2F
    lineweight 2
}

title Hệ Thống Quản Lý Rạp Chiếu Phim\nSơ Đồ Lớp Module - Pha Phân Tích\n(View và Model)

' =====================================================
' PACKAGE: Module Tìm Kiếm và Xem Chi Tiết Phim
' =====================================================
package "Module Tìm Kiếm và Xem Chi Tiết Phim" {
    
    ' =====================================================
    ' TẦNG VIEW
    ' =====================================================
    class SearchMovieJSP {
        keyword
        movies
        message
    }
    
    class MovieDetailJSP {
        movie
    }
    
    ' =====================================================
    ' TẦNG MODEL
    ' =====================================================
    class Genre {
        name
        description
    }
    
    class Movie {
        title
        description
        duration
        rating
        releaseDate
        status
        poster
        trailer
        language
    }
}

' =====================================================
' PACKAGE: Module Lên Lịch Chiếu
' =====================================================
package "Module Lên Lịch Chiếu" {
    
    ' =====================================================
    ' TẦNG VIEW
    ' =====================================================
    class ScheduleShowtimeJSP {
        moviesNowShowing
        availableRooms
        successMessage
        errorMessage
        showDate
        startTime
        endTime
        movieId
        roomId
    }
    
    class ManageShowtimeJSP {
        showtimes
    }
    
    ' =====================================================
    ' TẦNG MODEL
    ' =====================================================
    class Showtime {
        startTime
        endTime
        status
    }
    
    class Room {
        name
        capacity
        description
        format
    }
    
    class Cinema {
        name
        address
        description
    }
}

' =====================================================
' QUAN HỆ GIỮA CÁC MODULE (Movie được dùng chung)
' =====================================================
' Movie được sử dụng ở cả 2 module

' Movie <-> Genre (N:M) - Quan hệ nhiều-nhiều
Movie "N" }o--o{ "M" Genre : "thuộc nhiều thể loại"

' =====================================================
' QUAN HỆ: Module Tìm Kiếm và Xem Chi Tiết Phim
' =====================================================

' SearchMovieJSP sử dụng danh sách Movie (association - nhiều Movie)
SearchMovieJSP --> "0..*" Movie : "hiển thị danh sách"

' MovieDetailJSP sử dụng một Movie (association - một Movie)
MovieDetailJSP --> "1" Movie : "hiển thị chi tiết"

' =====================================================
' QUAN HỆ: Module Lên Lịch Chiếu
' =====================================================

' ScheduleShowtimeJSP sử dụng danh sách Movie (association)
ScheduleShowtimeJSP --> "0..*" Movie : "chọn phim"

' ScheduleShowtimeJSP sử dụng danh sách Room (association)
ScheduleShowtimeJSP --> "0..*" Room : "chọn phòng"

' ManageShowtimeJSP sử dụng danh sách Showtime (association)
ManageShowtimeJSP --> "0..*" Showtime : "hiển thị danh sách"

' Showtime sử dụng Movie (association - một Showtime có một Movie)
Showtime --> "1" Movie : "chiếu phim"

' Showtime sử dụng Room (association - một Showtime có một Room)
Showtime --> "1" Room : "chiếu tại"

' Room sử dụng Cinema (association - một Room thuộc một Cinema)
Room --> "1" Cinema : "thuộc rạp"

' =====================================================
' GHI CHÚ VÀ MÔ TẢ
' =====================================================

note right of SearchMovieJSP
    <b>View:</b> Trang tìm kiếm phim
    • Nhận từ khóa tìm kiếm
    • Hiển thị danh sách phim kết quả
    • Cho phép chuyển đến trang chi tiết
end note

note right of MovieDetailJSP
    <b>View:</b> Trang chi tiết phim
    • Hiển thị đầy đủ thông tin một phim
    • Bao gồm poster, mô tả, trailer, etc.
end note

note right of ScheduleShowtimeJSP
    <b>View:</b> Trang tạo lịch chiếu
    • Hiển thị danh sách phim đang chiếu
    • Hiển thị danh sách phòng trống
    • Cho phép nhập thông tin lịch chiếu
end note

note right of ManageShowtimeJSP
    <b>View:</b> Trang quản lý lịch chiếu
    • Hiển thị danh sách tất cả lịch chiếu
    • Hiển thị thông tin phim và phòng
end note

note bottom of Movie
    <b>Model:</b> Thông tin phim
    Chứa tất cả thuộc tính về phim
    Một phim có thể có nhiều thể loại (genres)
end note

note bottom of Genre
    <b>Model:</b> Thể loại phim
    Một thể loại có thể có nhiều phim
end note

note bottom of Showtime
    <b>Model:</b> Lịch chiếu phim
    Liên kết với Movie và Room
end note

note bottom of Room
    <b>Model:</b> Phòng chiếu phim
    Liên kết với Cinema
end note

note bottom of Cinema
    <b>Model:</b> Rạp chiếu phim
    Chứa thông tin về rạp
end note

@enduml

